[package]
name = "rust"
version = "0.1.0"
authors = ["maybe-hello-world <maybe.hello.world@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.5.0", features = ["attributes"] }